fixed button alignment after adding link

--- a/src/index.scss
+++ b/src/index.scss
@@ -65,6 +65,7 @@ a {
   display: flex;
   align-items: center;
   text-decoration: none;
+  cursor: url("./assets/hand.png"), auto;
 }
 
 a:hover {
@@ -76,8 +77,6 @@ a:hover {
     font-size: 4rem;
   }
   a {
-    text-transform: uppercase;
-    color: #ffffff;
-    text-decoration: none;
+    display: initial;
   }
 }
